# agent-harness

./: .gitignore  AGENTS.md  Agent Harness Research System v1.md  Agent Harness Research System v2.md  Agent Harness Research System v3.md  Agent Harness Research System.docx  Context.md  README.md  Session-1.md  Session-2.md  Session-3.md  Step B.md  Step-A.md  Step-C.md  Step-D.md  Step-E.md  Step-F2.md  Step-F3.1.md  Step-F3.md  Step-G1.md  Step-G2.md  Step-G3.md  Step-H1.md  Step-J1.1.md  Step-J1.2.md  Step-J1.3.md  Step-J1.4.md  Step-J1.5.md  Step-J1.md  Step-J2.2.md  Step-K1.0.md  pyproject.toml
.claude/: settings.json  settings.local.json
baseline/: baseline_metadata.json  evaluation_report.json
dc_power_agent/: __init__.py  agent.py  cli.py  eval_runner.py  evidence_filter.py  gap_detector.py  markdown.py  profile.py  research_object.py  trace.py  web_search.py
dc_power_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
engagements/: hyperscaler_ai_strategy.yaml
eval/: README.md
evals/: questions.yaml
functional_agents/: __init__.py  assumption_agent.py  base.py  challenge_agent.py  cli.py  context.py  contract.py  debug.py  decision_analysis_agent.py  decision_architecture.py  engagement_spec.py  evidence_agent.py  executive_confidence_agent.py  extraction_experiment.py  hypothesis_agent.py  multi_profile_agent.py  opportunity_agent.py  orchestrator.py  performance.py  planner_agent.py  problem_framing_agent.py  profile_comparison.py  profile_corpus_validator.py  qa_agent.py  reasoning_target.py  recommendation_agent.py  (+11 more)
(+769 files in other folders)
