[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dc-power-agent"
version = "0.1.0"
description = "Local research harness for AI data center infrastructure documents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39.0",
    "pydantic>=2.8.0",
    "pypdf>=4.3.0",
    "pyyaml>=6.0",
    "typer>=0.12.5",
    # K1.0 – optional web retrieval (all soft deps; guarded in web_search.py)
    "ddgs>=9.0",
    "requests>=2.31",
    "trafilatura>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]
knowledge = [
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]

[project.scripts]
dc-power-agent = "research_agent.cli:app"
dc-power-agent-eval = "research_agent.eval_runner:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["research_agent*", "knowledge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
